tests/errors/int2char-err.src
.IPPcode18
defvar GF@fail
INT2CHAR GF@fail int@-1
write GF@fail